clean folder structures

--- a/reddit/reddit.ipynb
+++ b/reddit/reddit.ipynb
@@ -7,8 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import praw\n",
-    "import json"
+    "import os\n",
+    "import dotenv\n",
+    "import json\n",
+    "import praw"
    ]
   },
   {
@@ -18,10 +20,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load info from .env file\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
     "reddit = praw.Reddit(\n",
-    "    client_id=\"EMDfMv0me-4ANHREQd1njQ\",\n",
-    "    client_secret=\"-KCg48wuMMUsl294n87YBoFU7-ReyA\",\n",
-    "    user_agent=\"my user agent\"\n",
+    "    client_id=os.getenv(\"REDDIT_CLIENT_ID\"),\n",
+    "    client_secret=os.getenv(\"REDDIT_CLIENT_SECRET\"),\n",
+    "    user_agent=os.getenv(\"REDDIT_USER_AGENT\")\n",
     ")"
    ]
   },
